feat: add resolve and reject of interceptor

--- a/docs/01.framework.md
+++ b/docs/01.framework.md
@@ -1,5 +1,3 @@
-
-
 ## set up ui
 
 **安装 uni-ui**
@@ -12,7 +10,7 @@ pnpm add sass-loader@10.1.1 -D
 pnpm add @dcloudio/uni-ui
 ```
 
-**配置easycom**
+**配置 easycom**
 
 ```bash
 // pages.json
@@ -24,7 +22,7 @@ pnpm add @dcloudio/uni-ui
 			"^uni-(.*)": "@dcloudio/uni-ui/lib/uni-$1/uni-$1.vue"
 		}
 	},
-	
+
 	// 其他内容
 	pages:[
 		// ...
@@ -65,8 +63,141 @@ persist: {
         },
       },
     },
-    
 ```
 
+## 增加拦截器的操作，
+
+每次请求的拦截器都有针对系统，做出响应的设置，本项目设置如下
+
+1. 设置基础地址
+1. 超时时间 （10 秒）
+1. 增加请求来源
+1. 增加 auth 的验证 token
+
+在 uni 中添加拦截器 这里 http 和文件上传的请求头是一样处理的，完成如下代码，
+调用
+
+```
+// utils/http.ts
+const httpInterceptor = {
+  //request之前调用的过程
+  invoke(options: UniApp.RequestOptions) {
+
+  }
+  // 调用成功
+  success(args: any) {
+    console.log('Interceptor success!')
+  },
+  // 调用失败
+  fail(err: any) {
+    // console.log('interceptor-fail', err)
+  },
+  // 调用完成后
+  complete(res: any) {
+    console.log('interceptor-complete', res)
+  }
+}
+uni.addInterceptor('request', httpInterceptor)
+uni.addInterceptor('uploadFile', httpInterceptor)
+```
+
+```
+import { useMemberStore } from '@/stores'
+
+const httpInterceptor = {
+  invoke(options: UniApp.RequestOptions) {
+    if (!options.url.startsWith('http')) {
+      options.url = baseUrl + options.url
+    }
+    options.timeout = 8000
+    // 增加token 和 客户端声明
+    const memberStore = useMemberStore()
+    const token = memberStore.profile?.token
+    console.log(memberStore.profile, 'memberStore.profile')
+    options.header = {
+      ...options.header,
+      'source-client': 'miniapp',
+      Authorization: token ? token : undefined,
+    }
+    // console.log(process.env.SHOPEE_BASE_API)
+    console.log(options, 'options')
+  },
+  success(args: any) {
+    // 请求成功后，修改code值为1
+    // args.data.code = 1
+    console.log('Interceptor success!')
+  },
+  fail(err: any) {
+    // console.log('interceptor-fail', err)
+  },
+  complete(res: any) {
+    console.log('interceptor-complete', res)
+  },
+}
+uni.addInterceptor('request', httpInterceptor)
+uni.addInterceptor('uploadFile', httpInterceptor)
+```
+
+封装应用内部使用的 http 的方法
+
+```
+interface Data<T> {
+  code: string
+  msg: string
+  result: T
+}
+export const http = (options: UniApp.RequestOptions) => {
+  return new Promise((resolve, reject) => {
+    uni.request({
+      ...options,
+      success(res) {
+        console.log('Http success')
+        resolve(res.data as Data<any>)
+      },
+    })
+  })
+}
+```
+
+完成上述代码后，拦截器里的的各种回调首先是如果成功
+Interceptor sucess -> Http success -> interceptor-complete
+但是调用返回 401,404 的情况下依然过程调用成功，但是在业务上这并不是成功，应该是异常。需要进行处理,
+
+## 完善 http 请求成功和失败的处理
+
+### resolve reject
+
+```
+export const http = (options: UniApp.RequestOptions) => {
+  return new Promise((resolve, reject) => {
+    uni.request({
+      ...options,
+      success(res) {
+        console.log(res.statusCode, 'res.statusCode')
+        if (res.statusCode >= 200 && res.statusCode < 300) {
+          //1. 调用成功
+          resolve(res.data as Data<any>)
+        } else if (res.statusCode === 401) {
+          //2. 鉴权失败
+          reject(res)
+        } else {
+          //3. 其他错误 -> 根据后端错误信息提示
+          reject(res)
+        }
+        console.log('Promise success')
+      },
+      fail(err) {
+        uni.showToast({
+          title: '网络错误',
+          icon: 'fail',
+          mask: true,
+        })
+      },
+    })
+  })
+}
+```
+
+### 总结，目前虾皮系统的开发架构已经基本完成，接下来就是首页的开发。
 
 参考： https://uniapp.dcloud.net.cn/component/uniui/quickstart.html
